--- a/mongodb/package.json
+++ b/mongodb/package.json
@@ -3,12 +3,6 @@
   "version": "1.0.0",
   "description": "mqtt client which stores each message into mongodb using topic name as collection name",
   "main": "mqtt-client.js",
-  "author": "Senacor Technolocies AG",
-  "dependencies": {
-	  {
-		"mqtt" : "*",
-		"stdio" : "*",
-		"mongodb" : "*",
-	  }
-  }
+  "author": "Senacor Technolocies AG"
+
 }
