--- a/microservice/HazelCollector/pom.xml
+++ b/microservice/HazelCollector/pom.xml
@@ -52,6 +52,12 @@
         <version>20140107</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.twitter4j</groupId>
+        <artifactId>twitter4j-core</artifactId>
+        <version>4.0.2</version>
+      </dependency>
+
     </dependencies>
 
     
